tests/algorithms/x/Kotlin/backtracking/sum_of_subsets.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/backtracking/sum_of_subsets.kt:38:5: error: unresolved reference: json
    json(((generate_sum_of_subsets_solutions(mutableListOf(3, 34, 4, 12, 5, 2), 9)) as Any?))
    ^
